--- a/css/style.css
+++ b/css/style.css
@@ -2158,6 +2158,14 @@ p {
     padding: 0;
     font-size: 120%;
 }
+@media (max-width: 768px) {
+    .service_sub_sec2_card1 p {
+        font-size: 80%;
+    }
+    .service_sub_sec2_card2 p {
+        font-size: 80%;
+    }
+}
 
 
 
@@ -2231,6 +2239,15 @@ p {
 @media (max-width: 1300px) {
     .service_sub_sec3 img {
         display: none;
+    }
+
+    .service_sub_sec3_card_path h3 {
+        margin-bottom: 2%;
+        font-size: 120%;
+    }
+    
+    .service_sub_sec3_card_path p {
+        font-size: 80%;
     }
 
     .service_sub_sec3_card_container {
