--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,16 @@ html {
     scroll-behavior: smooth;
 }
 
+header {
+    z-index: 100;
+}
+
+
+body {
+    margin: 0;
+    padding: 0;
+}
+
 .body {
     margin: 0;
     padding: 0;
@@ -31,6 +41,38 @@ html {
     -webkit-text-fill-color: transparent;
     background-clip: text;
 }
+
+
+
+
+
+
+
+/* width */
+::-webkit-scrollbar {
+    width: 8px;
+    padding: 5px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px rgba(128, 128, 128, 0);
+    border-radius: 10px;
+  }
+
+  
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: var(--inc_color2);
+    border-radius: 10px;
+  }
+  
+
+
+
+
+
+
 
 
 /* animations */
@@ -121,7 +163,8 @@ html {
 
 .mobile_services_dropdown_container {
     display: none;
-    padding-left: 10px; /* Indent dropdown items */
+    padding-left: 10px;
+    /* Indent dropdown items */
 }
 
 .mobile_services_dropdown_container a {
@@ -182,7 +225,6 @@ html {
     width: 100%;
     top: 100%;
     left: 0;
-    z-index: 99999;
     transition: opacity 1s ease, visibility 1s ease;
 }
 
@@ -340,9 +382,7 @@ html {
         display: none;
     }
 
-    .nav_logo_col img {
-        width: 40%;
-    }
+
 }
 
 
@@ -618,11 +658,19 @@ html {
     height: max-content;
 }
 
-.about_sticker img {
-    width: 10%;
+.about_sticker_img_container {
+    width: max-content;
+    height: max-content;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-.about_sticker img:hover {
+.about_sticker img {
+    width: 30%;
+}
+
+.about_sticker_img_container:hover img {
     animation: flip 2s;
 }
 
@@ -1290,7 +1338,6 @@ footer {
 
 
 
-
 /* *****************************                       ABOUT PAGE CSS           ****************************/
 .about_hero-content {
     position: relative;
@@ -1308,6 +1355,7 @@ footer {
     /* Prevents the image from repeating */
     overflow: hidden;
     padding-bottom: 10vh;
+    z-index: -1;
 }
 
 .about_hero_content_wrap {
@@ -1464,6 +1512,15 @@ footer {
     display: flex;
     align-items: center;
     justify-content: center;
+    position: relative;
+}
+
+.about_sec2_bg {
+    position: absolute;
+    width: 100%;
+    top: 0;
+    z-index: -1;
+    padding-left: 10%;
 }
 
 .about_sec2_col {
@@ -2611,7 +2668,370 @@ p {
 
 
 * {
-    border: 1px solid red;
+    /* border: 1px solid red; */
     font-family: "Poppins", sans-serif;
 
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/************************************* orbit dots animation *********************************/
+ul.solarsystem {
+    
+    position: relative;
+    width: 100%;
+    height: 200vh;
+    list-style: none;
+    -webkit-transition: all 1s ease-in;
+    -moz-transition: all 1s ease-in;
+    -o-transition: all 1s ease-in;
+    transition: all 1s ease-in;
+    overflow: hidden;
+    padding: 0;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+ul.solarsystem li {
+    text-indent: -9999px;
+    display: flex;
+    position: absolute;
+    border: 1px solid #a3a3a300;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+
+
+}
+
+ul.solarsystem li span {
+    display: block;
+    position: absolute;
+    width: 10px;
+    height: 10px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
+}
+
+ul.solarsystem li.active {
+    border-color: #aa4200;
+}
+
+
+
+ul.solarsystem li.mercury {
+    width: 100px;
+    height: 100px;
+    -webkit-border-radius: 52px;
+    -moz-border-radius: 52px;
+    border-radius: 52px;
+    top: 270px;
+    left: 430px;
+    z-index: 99;
+}
+
+ul.solarsystem li.mercury span {
+    background: #F4B845;
+    top: 10px;
+    left: 10px;
+}
+
+ul.solarsystem li.venus {
+    width: 160px;
+    height: 160px;
+    -webkit-border-radius: 82px;
+    -moz-border-radius: 82px;
+    border-radius: 82px;
+    top: 240px;
+    left: 400px;
+    z-index: 98;
+}
+
+ul.solarsystem li.venus span {
+    background: #F4B845;
+    top: 118px;
+    left: 5px;
+}
+
+ul.solarsystem li.earth {
+    width: 220px;
+    height: 220px;
+    -webkit-border-radius: 112px;
+    -moz-border-radius: 112px;
+    border-radius: 112px;
+    top: 210px;
+    left: 370px;
+    z-index: 97;
+}
+
+ul.solarsystem li.earth span {
+    background: #F4B845;
+    top: 56px;
+    left: 5px;
+}
+
+ul.solarsystem li.earth span.moon {
+    width: 4px;
+    height: 4px;
+    -webkit-border-radius: 2px;
+    -moz-border-radius: 2px;
+    border-radius: 2px;
+    background: #F4B845;
+    top: 12px;
+    left: 12px;
+}
+
+ul.solarsystem li.mars {
+    width: 280px;
+    height: 280px;
+    -webkit-border-radius: 142px;
+    -moz-border-radius: 142px;
+    border-radius: 142px;
+    top: 180px;
+    left: 340px;
+    z-index: 96;
+}
+
+ul.solarsystem li.mars span {
+    background: #F4B845;
+    top: 0px;
+    left: 175px;
+}
+
+ul.solarsystem li.asteroids_meteorids {
+    top: 155px;
+    left: 315px;
+    z-index: 1;
+    width: 330px;
+    height: 330px;
+    -webkit-border-radius: 165px;
+    -moz-border-radius: 165px;
+    border-radius: 165px;
+    border: none;
+}
+
+ul.solarsystem li.jupiter {
+    width: 340px;
+    height: 340px;
+    -webkit-border-radius: 172px;
+    -moz-border-radius: 172px;
+    border-radius: 172px;
+    top: 150px;
+    left: 310px;
+    z-index: 95;
+}
+
+ul.solarsystem li.jupiter span {
+    background: #F4B845;
+    top: 67px;
+    left: 24px;
+}
+
+ul.solarsystem li.saturn {
+    width: 400px;
+    height: 400px;
+    -webkit-border-radius: 202px;
+    -moz-border-radius: 202px;
+    border-radius: 202px;
+    top: 120px;
+    left: 280px;
+    z-index: 94;
+}
+
+ul.solarsystem li.saturn span {
+    background: #F4B845;
+    top: 24px;
+    left: 300px;
+}
+
+
+
+ul.solarsystem li.uranus {
+    width: 460px;
+    height: 460px;
+    -webkit-border-radius: 232px;
+    -moz-border-radius: 232px;
+    border-radius: 232px;
+    top: 90px;
+    left: 250px;
+    z-index: 93;
+}
+
+ul.solarsystem li.uranus span {
+    background: #F4B845;
+    top: 7px;
+    left: 300px;
+}
+
+ul.solarsystem li.neptune {
+    width: 520px;
+    height: 520px;
+    -webkit-border-radius: 262px;
+    -moz-border-radius: 262px;
+    border-radius: 262px;
+    top: 60px;
+    left: 220px;
+    z-index: 92;
+}
+
+ul.solarsystem li.neptune span {
+    background: #F4B845;
+    top: 0px;
+    left: 200px;
+}
+
+ul.solarsystem li.pluto {
+    width: 580px;
+    height: 580px;
+    -webkit-border-radius: 292px;
+    -moz-border-radius: 292px;
+    border-radius: 292px;
+    top: 30px;
+    left: 190px;
+    z-index: 91;
+}
+
+ul.solarsystem li.pluto span {
+    background: #F4B845;
+    top: 79px;
+    left: 79px;
+}
+
+
+
+/* CSS3 Animations */
+ul.solarsystem li {
+    -webkit-animation-iteration-count: infinite;
+    -webkit-animation-timing-function: linear;
+    -webkit-animation-name: orbit;
+
+    -moz-animation-iteration-count: infinite;
+    -moz-animation-timing-function: linear;
+    -moz-animation-name: orbit;
+}
+
+ul.solarsystem li.earth span {
+    -webkit-animation-iteration-count: infinite;
+    -webkit-animation-timing-function: linear;
+    -webkit-animation-name: moon;
+
+    -moz-animation-iteration-count: infinite;
+    -moz-animation-timing-function: linear;
+    -moz-animation-name: moon;
+}
+
+ul.solarsystem li.mercury {
+    -webkit-animation-duration: 5s;
+    -moz-animation-duration: 5s;
+}
+
+ul.solarsystem li.venus {
+    -webkit-animation-duration: 8s;
+    -moz-animation-duration: 8s;
+}
+
+ul.solarsystem li.earth {
+    -webkit-animation-duration: 12s;
+    -moz-animation-duration: 12s;
+}
+
+ul.solarsystem li.earth span {
+    -webkit-animation-duration: 2s;
+    -moz-animation-duration: 2s;
+}
+
+ul.solarsystem li.mars {
+    -webkit-animation-duration: 10s;
+    -moz-animation-duration: 10s;
+}
+
+ul.solarsystem li.jupiter {
+    -webkit-animation-duration: 10s;
+    -moz-animation-duration: 10s;
+}
+
+ul.solarsystem li.saturn {
+    -webkit-animation-duration: 8s;
+    -moz-animation-duration: 8s;
+}
+
+ul.solarsystem li.uranus {
+    -webkit-animation-duration: 4s;
+    -moz-animation-duration: 4s;
+}
+
+ul.solarsystem li.neptune {
+    -webkit-animation-duration: 8s;
+    -moz-animation-duration: 8s;
+}
+
+ul.solarsystem li.pluto {
+    -webkit-animation-duration: 10s;
+    -moz-animation-duration: 10s;
+}
+
+@-webkit-keyframes orbit {
+    from {
+        -webkit-transform: rotate(0deg)
+    }
+
+    to {
+        -webkit-transform: rotate(360deg)
+    }
+}
+
+@-webkit-keyframes moon {
+    from {
+        -webkit-transform: rotate(0deg)
+    }
+
+    to {
+        -webkit-transform: rotate(360deg)
+    }
 }
