--- a/css/style.css
+++ b/css/style.css
@@ -334,6 +334,26 @@ body {
 
 
 
+.header_contact_button {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+}
+
+.header_contact_button button {
+    float: right;
+    margin-right: 2%;
+    background-color: #00000000;
+    color: #000;
+    padding: 2% 5% 2% 5%;
+    border: 4px solid var(--inc_color2);
+    border-radius: 2rem;
+    outline: none;
+}
+
+
+
+
 
 
 /* social media icons */
@@ -382,6 +402,9 @@ body {
         display: none;
     }
 
+    .header_contact_button{
+        display: none;
+    }
 
 }
 
@@ -3208,3 +3231,14 @@ ul.solarsystem li.pluto {
   }
   
 
+
+
+
+
+
+
+
+
+  *{
+    /* border: 1px solid red; */
+  }
