--- a/css/style.css
+++ b/css/style.css
@@ -343,7 +343,7 @@ body {
 .header_contact_button button {
     float: right;
     margin-right: 2%;
-    background-color: #00000000;
+    background-color: #ffffff;
     color: #000;
     padding: 2% 5% 2% 5%;
     border: 4px solid var(--inc_color2);
