--- a/css/style.css
+++ b/css/style.css
@@ -3238,7 +3238,7 @@ ul.solarsystem li.pluto {
     width: 100%;
     height: max-content;
 
-    background-image: url(../img/terms\ and\ conditions.webp);
+    background-image: url(../img/sitemaphero.jpg);
     background-size: cover;
     /* Ensures the image covers the entire div */
     background-position: center;
