--- a/css/style.css
+++ b/css/style.css
@@ -446,8 +446,9 @@ body {
 }
 
 .hero-content p {
-    font-size: 2rem;
-    margin-bottom: 20px;
+    font-size: 4rem;
+    margin-bottom: 10px;
+    font-weight: bold;
     color: var(--brown_text);
     line-height: 150%;
     padding: 0;
@@ -519,7 +520,7 @@ body {
     }
 
     .hero-content p {
-        font-size: 1.5rem;
+        font-size: 3rem;
     }
 }
 
@@ -534,7 +535,7 @@ body {
     }
 
     .hero-content p {
-        font-size: 1rem;
+        font-size: 2rem;
     }
 
     .hero-content .quote-button {
@@ -562,7 +563,7 @@ body {
     }
 
     .hero-content p {
-        font-size: 2rem;
+        font-size: 3rem;
     }
 
     .container-image {
@@ -591,7 +592,7 @@ body {
     }
 
     .hero-content p {
-        font-size: 1rem;
+        font-size: 2rem;
     }
 
     .container-image {
@@ -609,7 +610,7 @@ body {
     }
 
     .hero-content p {
-        font-size: 1rem;
+        font-size: 1.5rem;
     }
 
     .container-image {
